Develop basic html structure

--- a/index.html
+++ b/index.html
@@ -7,9 +7,36 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header></header>
+    <header id="header">
+        <h1 id="page-title">Calculator</h1>
+    </header>
 
-    <main></main>
+    <main>
+        <div id="calculator-container">
+            <div id="display"></div>
+            <div id="operators">
+                <button class="btn" id="add">+</button>
+                <button class="btn" id="subtract">-</button>
+                <button class="btn" id="multiply">x</button>
+                <button class="btn" id="divide">/</button>
+            </div>
+            <div id="buttons">
+                <button class="btn" id="7">7</button>
+                <button class="btn" id="8">8</button>
+                <button class="btn" id="9">9</button>
+                <button class="btn" id="4">4</button>
+                <button class="btn" id="5">5</button>
+                <button class="btn" id="6">6</button>
+                <button class="btn" id="1">1</button>
+                <button class="btn" id="2">2</button>
+                <button class="btn" id="3">3</button>
+                <button class="btn" id="0">0</button>
+                <button class="btn" id=".">.</button>
+                <button class="btn" id="AC">AC</button>
+            </div>
+            <button class="btn" id="equals">=</button>
+        </div>
+    </main>
 
     <footer>
         <p>
