--- a/index.html
+++ b/index.html
@@ -13,14 +13,12 @@
 
     <main>
         <div id="calculator-container">
-            <div id="display"></div>
-            <div id="operators">
-                <button class="btn" id="add">+</button>
-                <button class="btn" id="subtract">-</button>
-                <button class="btn" id="multiply">x</button>
-                <button class="btn" id="divide">/</button>
-            </div>
+            <div id="display">0</div>
             <div id="buttons">
+                <button class="operator-btn btn" id="add">+</button>
+                <button class="operator-btn btn" id="subtract">-</button>
+                <button class="operator-btn btn" id="multiply">x</button>
+                <button class="operator-btn btn" id="divide">/</button>
                 <button class="btn" id="7">7</button>
                 <button class="btn" id="8">8</button>
                 <button class="btn" id="9">9</button>
@@ -33,8 +31,9 @@
                 <button class="btn" id="0">0</button>
                 <button class="btn" id=".">.</button>
                 <button class="btn" id="AC">AC</button>
+                <button class="btn" id="equals">=</button>
             </div>
-            <button class="btn" id="equals">=</button>
+            
         </div>
     </main>
 
