--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
                 <button class="operator-btn btn" id="subtract">-</button>
                 <button class="operator-btn btn" id="multiply">x</button>
                 <button class="operator-btn btn" id="divide">/</button>
-                <button class="btn" id="7">7</button>
-                <button class="btn" id="8">8</button>
-                <button class="btn" id="9">9</button>
-                <button class="btn" id="4">4</button>
-                <button class="btn" id="5">5</button>
-                <button class="btn" id="6">6</button>
-                <button class="btn" id="1">1</button>
-                <button class="btn" id="2">2</button>
-                <button class="btn" id="3">3</button>
-                <button class="btn" id="0">0</button>
-                <button class="btn" id=".">.</button>
-                <button class="btn" id="AC">AC</button>
-                <button class="btn" id="equals">=</button>
+                <button class="number-btn btn" id="7">7</button>
+                <button class="number-btn btn" id="8">8</button>
+                <button class="number-btn btn" id="9">9</button>
+                <button class="number-btn btn" id="4">4</button>
+                <button class="number-btn btn" id="5">5</button>
+                <button class="number-btn btn" id="6">6</button>
+                <button class="number-btn btn" id="1">1</button>
+                <button class="number-btn btn" id="2">2</button>
+                <button class="number-btn btn" id="3">3</button>
+                <button class="number-btn btn" id="0">0</button>
+                <button class="number-btn btn" id=".">.</button>
+                <button class="number-btn btn" id="AC">AC</button>
+                <button class="number-btn btn" id="equals">=</button>
             </div>
             
         </div>
