--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
         <div id="calculator-container">
             <div id="display">0</div>
             <div id="buttons">
-                <button class="operator-btn btn" id="add">+</button>
-                <button class="operator-btn btn" id="subtract">-</button>
-                <button class="operator-btn btn" id="multiply">x</button>
-                <button class="operator-btn btn" id="divide">/</button>
-                <button class="number-btn btn" id="7">7</button>
-                <button class="number-btn btn" id="8">8</button>
-                <button class="number-btn btn" id="9">9</button>
-                <button class="number-btn btn" id="4">4</button>
-                <button class="number-btn btn" id="5">5</button>
-                <button class="number-btn btn" id="6">6</button>
-                <button class="number-btn btn" id="1">1</button>
-                <button class="number-btn btn" id="2">2</button>
-                <button class="number-btn btn" id="3">3</button>
-                <button class="number-btn btn" id="0">0</button>
+                <button class="operator-btn btn" id="add" operator-btn>+</button>
+                <button class="operator-btn btn" id="subtract" operator-btn>-</button>
+                <button class="operator-btn btn" id="multiply" operator-btn>x</button>
+                <button class="operator-btn btn" id="divide" operator-btn>/</button>
+                <button class="number-btn btn" id="7" number-btn>7</button>
+                <button class="number-btn btn" id="8" number-btn>8</button>
+                <button class="number-btn btn" id="9" number-btn>9</button>
+                <button class="number-btn btn" id="4" number-btn>4</button>
+                <button class="number-btn btn" id="5" number-btn>5</button>
+                <button class="number-btn btn" id="6" number-btn>6</button>
+                <button class="number-btn btn" id="1" number-btn>1</button>
+                <button class="number-btn btn" id="2" number-btn>2</button>
+                <button class="number-btn btn" id="3" number-btn>3</button>
+                <button class="number-btn btn" id="0" number-btn>0</button>
                 <button class="number-btn btn" id=".">.</button>
-                <button class="number-btn btn" id="AC">AC</button>
+                <button class="number-btn btn" id="AC" >AC</button>
                 <button class="number-btn btn" id="equals">=</button>
             </div>
             
